# semgrep-agent

./: .gitignore  README.md  pyproject.toml
semgrep_agent/: cli.py  issues.py  scanner.py
