[project]
name = "semgrep-agent"
version = "0.1.0"
description = "Agent that runs Semgrep on a codebase and creates GitHub issues for findings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "semgrep>=1.0",
]

[project.scripts]
semgrep-agent = "semgrep_agent.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
