[project]
name = "semgrep-agent"
version = "0.2.0"
description = "MCP-based agent that scans codebases with Semgrep and creates GitHub issues"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "mcp>=1.0",
]

[project.scripts]
semgrep-agent = "semgrep_agent.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
